grammar/.antlr/VBScriptParser.java
// Generated from c:/Users/dbreitenstein/Documents/Studium/vbscript-transpiler/grammar/VBScript.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class VBScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DO=1, UNTIL=2, LOOP=3, SET=4, IF=5, THEN=6, ELSE=7, ELSEIF=8, ENDIF=9, 
		END=10, FOR=11, EACH=12, IN=13, NEXT=14, EXECUTEGLOBAL=15, IDENTIFIER=16, 
		NUMBER=17, STRING=18, AMP=19, PLUS=20, MINUS=21, STAR=22, DIV=23, EQ=24, 
		NEQ=25, LT=26, LE=27, GT=28, GE=29, LPAREN=30, RPAREN=31, COMMA=32, DOT=33, 
		COLON=34, SEMI=35, NEWLINE=36, COMMENT=37, WS=38;
	public static final int
		RULE_prog = 0, RULE_line = 1, RULE_statement = 2, RULE_ifBlock = 3, RULE_ifMultiLine = 4, 
		RULE_elseifBlock = 5, RULE_ifSingleLine = 6, RULE_doUntilLoop = 7, RULE_forEachLoop = 8, 
		RULE_functionCall = 9, RULE_procedureCall = 10, RULE_argList = 11, RULE_assignment = 12, 
		RULE_assignable = 13, RULE_exprWithOp = 14, RULE_comparison = 15, RULE_concatenation = 16, 
		RULE_expr = 17, RULE_primaryExpr = 18, RULE_chainedCall = 19, RULE_valueExpr = 20, 
		RULE_executeglobalStmt = 21, RULE_block = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "line", "statement", "ifBlock", "ifMultiLine", "elseifBlock", 
			"ifSingleLine", "doUntilLoop", "forEachLoop", "functionCall", "procedureCall", 
			"argList", "assignment", "assignable", "exprWithOp", "comparison", "concatenation", 
			"expr", "primaryExpr", "chainedCall", "valueExpr", "executeglobalStmt", 
			"block"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "'&'", "'+'", "'-'", "'*'", 
			"'/'", "'='", "'<>'", "'<'", "'<='", "'>'", "'>='", "'('", "')'", "','", 
			"'.'", "':'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DO", "UNTIL", "LOOP", "SET", "IF", "THEN", "ELSE", "ELSEIF", "ENDIF", 
			"END", "FOR", "EACH", "IN", "NEXT", "EXECUTEGLOBAL", "IDENTIFIER", "NUMBER", 
			"STRING", "AMP", "PLUS", "MINUS", "STAR", "DIV", "EQ", "NEQ", "LT", "LE", 
			"GT", "GE", "LPAREN", "RPAREN", "COMMA", "DOT", "COLON", "SEMI", "NEWLINE", 
			"COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "VBScript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public VBScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(VBScriptParser.EOF, 0); }
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 69793712178L) != 0)) {
				{
				{
				setState(46);
				line();
				}
				}
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(52);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LineContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(VBScriptParser.NEWLINE, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> COLON() { return getTokens(VBScriptParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(VBScriptParser.COLON, i);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_line);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1074235442L) != 0)) {
				{
				setState(54);
				statement();
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COLON) {
					{
					{
					setState(55);
					match(COLON);
					setState(56);
					statement();
					}
					}
					setState(61);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(64);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtIfBlockContext extends StatementContext {
		public IfBlockContext ifBlock() {
			return getRuleContext(IfBlockContext.class,0);
		}
		public StmtIfBlockContext(StatementContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ProcCallContext extends StatementContext {
		public ProcedureCallContext procedureCall() {
			return getRuleContext(ProcedureCallContext.class,0);
		}
		public ProcCallContext(StatementContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtFunctionCallContext extends StatementContext {
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public StmtFunctionCallContext(StatementContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtAssignmentContext extends StatementContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public StmtAssignmentContext(StatementContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtOtherContext extends StatementContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public StmtOtherContext(StatementContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtForEachLoopContext extends StatementContext {
		public ForEachLoopContext forEachLoop() {
			return getRuleContext(ForEachLoopContext.class,0);
		}
		public StmtForEachLoopContext(StatementContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtExecuteGlobalContext extends StatementContext {
		public ExecuteglobalStmtContext executeglobalStmt() {
			return getRuleContext(ExecuteglobalStmtContext.class,0);
		}
		public StmtExecuteGlobalContext(StatementContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtDoUntilLoopContext extends StatementContext {
		public DoUntilLoopContext doUntilLoop() {
			return getRuleContext(DoUntilLoopContext.class,0);
		}
		public StmtDoUntilLoopContext(StatementContext ctx) { copyFrom(ctx); }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(74);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new StmtIfBlockContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				ifBlock();
				}
				break;
			case 2:
				_localctx = new StmtFunctionCallContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(67);
				functionCall();
				}
				break;
			case 3:
				_localctx = new ProcCallContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(68);
				procedureCall();
				}
				break;
			case 4:
				_localctx = new StmtAssignmentContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(69);
				assignment();
				}
				break;
			case 5:
				_localctx = new StmtExecuteGlobalContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(70);
				executeglobalStmt();
				}
				break;
			case 6:
				_localctx = new StmtDoUntilLoopContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(71);
				doUntilLoop();
				}
				break;
			case 7:
				_localctx = new StmtForEachLoopContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(72);
				forEachLoop();
				}
				break;
			case 8:
				_localctx = new StmtOtherContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(73);
				expr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfBlockContext extends ParserRuleContext {
		public IfMultiLineContext ifMultiLine() {
			return getRuleContext(IfMultiLineContext.class,0);
		}
		public IfSingleLineContext ifSingleLine() {
			return getRuleContext(IfSingleLineContext.class,0);
		}
		public IfBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifBlock; }
	}

	public final IfBlockContext ifBlock() throws RecognitionException {
		IfBlockContext _localctx = new IfBlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ifBlock);
		try {
			setState(78);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				ifMultiLine();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				ifSingleLine();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfMultiLineContext extends ParserRuleContext {
		public BlockContext thenBlock;
		public ElseifBlockContext elifBlock;
		public BlockContext elseBlock;
		public List<TerminalNode> IF() { return getTokens(VBScriptParser.IF); }
		public TerminalNode IF(int i) {
			return getToken(VBScriptParser.IF, i);
		}
		public TerminalNode THEN() { return getToken(VBScriptParser.THEN, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(VBScriptParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(VBScriptParser.NEWLINE, i);
		}
		public TerminalNode END() { return getToken(VBScriptParser.END, 0); }
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ComparisonContext comparison() {
			return getRuleContext(ComparisonContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(VBScriptParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(VBScriptParser.RPAREN, 0); }
		public TerminalNode ELSE() { return getToken(VBScriptParser.ELSE, 0); }
		public List<ElseifBlockContext> elseifBlock() {
			return getRuleContexts(ElseifBlockContext.class);
		}
		public ElseifBlockContext elseifBlock(int i) {
			return getRuleContext(ElseifBlockContext.class,i);
		}
		public IfMultiLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifMultiLine; }
	}

	public final IfMultiLineContext ifMultiLine() throws RecognitionException {
		IfMultiLineContext _localctx = new IfMultiLineContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ifMultiLine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(IF);
			setState(82);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(81);
				match(LPAREN);
				}
				break;
			}
			setState(86);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(84);
				expr();
				}
				break;
			case 2:
				{
				setState(85);
				comparison();
				}
				break;
			}
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RPAREN) {
				{
				setState(88);
				match(RPAREN);
				}
			}

			setState(91);
			match(THEN);
			setState(92);
			match(NEWLINE);
			setState(93);
			((IfMultiLineContext)_localctx).thenBlock = block();
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ELSEIF) {
				{
				{
				setState(94);
				((IfMultiLineContext)_localctx).elifBlock = elseifBlock();
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(100);
				match(ELSE);
				setState(101);
				match(NEWLINE);
				setState(102);
				((IfMultiLineContext)_localctx).elseBlock = block();
				}
			}

			setState(105);
			match(END);
			setState(106);
			match(IF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElseifBlockContext extends ParserRuleContext {
		public TerminalNode ELSEIF() { return getToken(VBScriptParser.ELSEIF, 0); }
		public TerminalNode THEN() { return getToken(VBScriptParser.THEN, 0); }
		public TerminalNode NEWLINE() { return getToken(VBScriptParser.NEWLINE, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ComparisonContext comparison() {
			return getRuleContext(ComparisonContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(VBScriptParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(VBScriptParser.RPAREN, 0); }
		public ElseifBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseifBlock; }
	}

	public final ElseifBlockContext elseifBlock() throws RecognitionException {
		ElseifBlockContext _localctx = new ElseifBlockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_elseifBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(ELSEIF);
			setState(110);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(109);
				match(LPAREN);
				}
				break;
			}
			setState(114);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(112);
				expr();
				}
				break;
			case 2:
				{
				setState(113);
				comparison();
				}
				break;
			}
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RPAREN) {
				{
				setState(116);
				match(RPAREN);
				}
			}

			setState(119);
			match(THEN);
			setState(120);
			match(NEWLINE);
			setState(121);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfSingleLineContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(VBScriptParser.IF, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode THEN() { return getToken(VBScriptParser.THEN, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(VBScriptParser.ELSE, 0); }
		public IfSingleLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifSingleLine; }
	}

	public final IfSingleLineContext ifSingleLine() throws RecognitionException {
		IfSingleLineContext _localctx = new IfSingleLineContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ifSingleLine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(IF);
			setState(124);
			expr();
			setState(125);
			match(THEN);
			setState(126);
			statement();
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				{
				setState(127);
				match(ELSE);
				setState(128);
				statement();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DoUntilLoopContext extends ParserRuleContext {
		public TerminalNode DO() { return getToken(VBScriptParser.DO, 0); }
		public TerminalNode UNTIL() { return getToken(VBScriptParser.UNTIL, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(VBScriptParser.NEWLINE, 0); }
		public TerminalNode LOOP() { return getToken(VBScriptParser.LOOP, 0); }
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public DoUntilLoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_doUntilLoop; }
	}

	public final DoUntilLoopContext doUntilLoop() throws RecognitionException {
		DoUntilLoopContext _localctx = new DoUntilLoopContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_doUntilLoop);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(DO);
			setState(132);
			match(UNTIL);
			setState(133);
			expr();
			setState(134);
			match(NEWLINE);
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 69793712178L) != 0)) {
				{
				{
				setState(135);
				line();
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(141);
			match(LOOP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ForEachLoopContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(VBScriptParser.FOR, 0); }
		public TerminalNode EACH() { return getToken(VBScriptParser.EACH, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode IN() { return getToken(VBScriptParser.IN, 0); }
		public TerminalNode NEWLINE() { return getToken(VBScriptParser.NEWLINE, 0); }
		public TerminalNode NEXT() { return getToken(VBScriptParser.NEXT, 0); }
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public ForEachLoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forEachLoop; }
	}

	public final ForEachLoopContext forEachLoop() throws RecognitionException {
		ForEachLoopContext _localctx = new ForEachLoopContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_forEachLoop);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(FOR);
			setState(144);
			match(EACH);
			setState(145);
			expr();
			setState(146);
			match(IN);
			setState(147);
			expr();
			setState(148);
			match(NEWLINE);
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 69793712178L) != 0)) {
				{
				{
				setState(149);
				line();
				}
				}
				setState(154);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(155);
			match(NEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionCallContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(VBScriptParser.IDENTIFIER, 0); }
		public TerminalNode LPAREN() { return getToken(VBScriptParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(VBScriptParser.RPAREN, 0); }
		public ArgListContext argList() {
			return getRuleContext(ArgListContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public FunctionCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionCall; }
	}

	public final FunctionCallContext functionCall() throws RecognitionException {
		FunctionCallContext _localctx = new FunctionCallContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_functionCall);
		int _la;
		try {
			setState(165);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(157);
				match(IDENTIFIER);
				setState(158);
				match(LPAREN);
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1074200576L) != 0)) {
					{
					setState(159);
					argList();
					}
				}

				setState(162);
				match(RPAREN);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(163);
				match(IDENTIFIER);
				setState(164);
				expr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProcedureCallContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(VBScriptParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(VBScriptParser.IDENTIFIER, i);
		}
		public List<TerminalNode> DOT() { return getTokens(VBScriptParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(VBScriptParser.DOT, i);
		}
		public ArgListContext argList() {
			return getRuleContext(ArgListContext.class,0);
		}
		public ProcedureCallContext procedureCall() {
			return getRuleContext(ProcedureCallContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(VBScriptParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(VBScriptParser.RPAREN, 0); }
		public ProcedureCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedureCall; }
	}
